[package]
name = "tdp-tl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.9"
env_logger = "0.10.0"
indexmap = "1.9.2"
log = "0.4.17"
nalgebra = "0.31.4"
nom-gcode = "0.1.1"
ordslice = "0.3.0"
rangemap = "1.2.0"
stopwatch = "0.0.7"
